apply discount functionality

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -56,6 +56,10 @@
       rel="stylesheet"
     />
 
+    <link href="
+https://cdn.jsdelivr.net/npm/react-toastify@10.0.5/dist/ReactToastify.min.css
+" rel="stylesheet">
+
     <title>Payment Discount</title>
   </head>
   <body>
@@ -96,6 +100,10 @@ https://cdn.jsdelivr.net/npm/elastic-email@1.0.4/index.min.js
 
     <script src="
 https://cdn.jsdelivr.net/npm/react-qr-code@2.0.12/lib/index.min.js
+"></script>
+
+<script src="
+https://cdn.jsdelivr.net/npm/react-toastify@10.0.5/dist/react-toastify.min.js
 "></script>
   </body>
 </html>
